test/files/neg/iterable-ordering.scala
object Test {
  val o = Ordering[Iterable[Int]]
}
